--- a/src/Components/Calendar/DayCardBack.css
+++ b/src/Components/Calendar/DayCardBack.css
@@ -1,14 +1,11 @@
 .day-card-back {
   transform: perspective(1px) translateZ(0);
   backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
   transform: rotateY(180deg);
 }
 
 .reserve-text {
   backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  /* transform: perspective(1px) translateZ(0); */
 }
 
 .sobota {
@@ -17,12 +14,6 @@
 
 .niedziela {
   background-color: var(--niedziela);
-}
-
-.test {
-  width: 100%;
-  height: 100%;
-  background-color: cornflowerblue;
 }
 
 @media (max-width: 767px) {
