--- a/src/Components/Calendar/DayCardFront.css
+++ b/src/Components/Calendar/DayCardFront.css
@@ -1,5 +1,6 @@
 .day-card-front {
   background-color: #eee;
+  backface-visibility: hidden;
 }
 
 .lessons-container {
