--- a/src/Components/Calendar/YesNoButtons.css
+++ b/src/Components/Calendar/YesNoButtons.css
@@ -7,6 +7,13 @@
   cursor: pointer;
 }
 
+.log-res-buttons {
+  flex-flow: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 50%;
+}
+
 @media (max-width: 767px) {
   .yes-no-buttons {
     justify-content: space-between;
